# JarvisDesktop-with-Agent-Office

./: .env.example  .gitignore  README.md
apps/desktop/: README.md  index.html  main.cjs  package-lock.json  package.json  preload.cjs  vite.config.ts
apps/desktop/scripts/: build-office-map.mjs  make-icon.py  package-app.sh
apps/desktop/src/: main.ts  reactor.ts  style.css
apps/desktop/src/office/: actors.ts  office.ts  pixels.ts  rigs.ts
apps/desktop/src/office/data/: map.json  shell.json
services/agent/: package-lock.json  package.json  tsconfig.json
services/agent/public/: index.html
services/agent/scripts/: test-roundtrip.mjs
services/agent/src/: env.ts  events.ts  server.ts
services/agent/src/brain/: AgentSdkProvider.ts  BrainProvider.ts  index.ts
services/agent/src/vault/: indexer.ts
services/voice/: README.md  pyproject.toml  run.sh
services/voice/jarvis_voice/: __main__.py  audio.py  brain_client.py  capture.py  config.py  link.py  pipeline.py  stt.py  tts.py  wake.py
shared/: EVENTS.md
