[project]
name = "jarvis-voice"
version = "0.1.0"
description = "JARVIS voice pipeline — wake word, Whisper STT, Piper TTS"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "sounddevice>=0.4.7",
    "openwakeword>=0.6.0",
    "onnxruntime>=1.17",
    "faster-whisper>=1.0.0",
    "websockets>=12.0",
    "piper-tts>=1.2.0",
]

[tool.uv]
package = false
# openwakeword pulls tflite-runtime on Linux, which has no py3.12 wheels —
# resolve for macOS only (this project never runs elsewhere).
environments = ["sys_platform == 'darwin'"]
